# portfolio-samples

./: README.md
electria-saas/: README.md
electria-saas/electria-api/: .env.example  .gitignore  README.md  pyproject.toml
electria-saas/electria-api/app/: __init__.py  main.py
electria-saas/electria-api/app/api/v1/: __init__.py
electria-saas/electria-api/app/api/v1/alerts/: __init__.py
electria-saas/electria-api/app/api/v1/auth/: __init__.py
electria-saas/electria-api/app/api/v1/chat/: __init__.py
electria-saas/electria-api/app/api/v1/dashboard/: __init__.py
electria-saas/electria-api/app/api/v1/search/: __init__.py
electria-saas/electria-api/app/api/v1/users/: __init__.py
electria-saas/electria-api/app/core/: __init__.py  config.py
electria-saas/electria-web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts
energy-dashboard/: README.md
energy-dashboard/dashboard/: app.py  router.py
energy-dashboard/data_processing/: data_loader.py  downsampling.py  metrics.py  smart_cache.py
energy-dashboard/security/: __init__.py  audit_logger.py  csrf.py  headers.py  ip_protection.py  password_policy.py  rate_limiter.py  session.py  totp.py
etl-pipeline/: README.md
etl-pipeline/extractors/: csv_to_parquet.py  parallel_api_scraper.py  parallel_series_builder.py
etl-pipeline/loaders/: arrow_scanner.py  batch_loader.py  parallel_io.py
etl-pipeline/transformers/: data_cache.py  polars_data_loader.py
hft-engine/: README.md
hft-engine/cpp/: backtest_engine.cpp  features_online.cpp  inference_engine.cpp
hft-engine/include/: backtest_engine.h  inference_engine.h
hft-engine/include/bqe/: features_online.hpp  ml_signal.hpp  ring_buffer.hpp  signal_publisher.hpp  simd_utils.hpp  types.hpp
hft-engine/python/: feature_engineering.py  feature_store.py  ml_training_optuna.py
sddp-solver/: README.md
sddp-solver/algorithm/: sddp.py
sddp-solver/core/: persistent_model.py  schemas.py
sddp-solver/tests/: __init__.py  test_sddp.py
(+6 files in other folders)
